cmake_minimum_required(VERSION 3.0.0)
set(CMAKE_CXX_STANDARD 11)
project(BackupUtility1 VERSION 1.0 DESCRIPTION "A utility for creating file backups" LANGUAGES CXX)
set(TARGET_NAME "BackupUtility")
add_executable(${TARGET_NAME} src/json/json.hpp  src/BackupDatabase.hpp src/MySqlLiteConnector.hpp src/BackupState.hpp src/BackupController.hpp  src/main.cpp)
find_library(SQLITE3 sqlite3)
message(${SQLITE3})
target_link_libraries(${TARGET_NAME} PUBLIC ${SQLITE3})
# target_include_directories(${TARGET_NAME} PUBLIC /usr/local/include/sqlite3/)
